--- a/signin/index.html
+++ b/signin/index.html
@@ -39,7 +39,7 @@
 
             <footer class="signup-footer">
 
-                <p>Create an Account? <a href="/learncss/10. mini project/index.html">Sign Up</a></p>
+                <p>Create an Account? <a href="/signup-page/index.html">Sign Up</a></p>
 
             </footer>
 
