--- a/signin/index.html
+++ b/signin/index.html
@@ -39,7 +39,7 @@
 
             <footer class="signup-footer">
 
-                <p>Create an Account? <a href="/signup-page/index.html">Sign Up</a></p>
+                <p>Create an Account? <a href="https://adib-k.github.io/signup-page/">Sign Up</a></p>
 
             </footer>
 
